Pequeños cambios atraves de toda la página para mejor lectura en español

--- a/404.md
+++ b/404.md
@@ -7,7 +7,7 @@ description: "No se ha encontrado la pagina que estas buscando."
 Lo siento, pero la pagina que estas buscando no existe, tal vez si la buscas de otra manera abajo.
 
 <script type="text/javascript">
-  var GOOG_FIXURL_LANG = 'en';
+  var GOOG_FIXURL_LANG = 'es';
   var GOOG_FIXURL_SITE = '{{ site.url }}'
 </script>
 <script type="text/javascript"
