Se agrega comentarios a anuncio

--- a/_posts/blog/2014-08-26-gracias.md
+++ b/_posts/blog/2014-08-26-gracias.md
@@ -7,6 +7,8 @@ excerpt:
 tags: [anuncios]
 image:
   feature: gracias.jpg
+  credit: Roberto Cadena Vega y sus magnificos padres
+comments: true
 date: 2014-08-26T13:05:47-05:00
 ---
 
